# erp-execution-service

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  compose.yml  docker-compose.dokploy.yml  docker-compose.yaml  docker-compose.yml  package-lock.json  package.json  tsconfig.json
.github/workflows/: docker-build-push.yml
provisioning_api/: .gitignore  MANIFEST.in  README.md  license.txt  pyproject.toml
provisioning_api/provisioning_api/: auth.py  exceptions.py  hooks.py  modules.txt
provisioning_api/provisioning_api/api/: __init__.py  provisioning.py
provisioning_api/provisioning_api/config/: __init__.py
provisioning_api/provisioning_api/utils/: __init__.py  logging.py  responses.py  site_db.py  validation.py
provisioning_api/tests/: conftest.py  test_auth.py  test_modules_txt.py  test_provisioning_import.py  test_site_db.py  test_validation.py
scripts/: check-env-keys.sh
src/: app.test.ts  app.ts  server.ts
src/config/: bench-runtime.test.ts  bench-runtime.ts  env.test.ts  env.ts
src/contracts/: envelope.ts  errors.ts  lifecycle.test.ts  lifecycle.ts
src/lib/: auth.test.ts  auth.ts  call-erp.ts  exec.ts  http-adapter-placeholder.ts  logger.ts  not-implemented-error.ts
src/lib/bench-agent/: client.test.ts  client.ts  sign.ts
src/lib/frappe-client/: client.test.ts  client.ts  errors.ts  types.ts  url.ts
src/lib/http/: client.test.ts  client.ts  (+3 more)
src/routes/: health.ts  lifecycle.ts  sites.ts
src/services/: create-site.test.ts  create-site.ts  lifecycle-service.ts  site-steps.test.ts  site-steps.ts
(+10 files in other folders)
