[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "provisioning_api"
version = "0.1.0"
description = "Frappe app: provisioning API contract (scaffold) for erp-execution-service"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["provisioning_api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
